--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@hookform/resolvers": "^5.1.1",
     "@tippyjs/react": "^4.2.6",
     "axios": "^1.10.0",
+    "lucide-react": "^0.525.0",
     "next": "15.4.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.60.0",
     "react-hot-toast": "^2.5.2",
     "tailwind-scrollbar-hide": "^4.0.0",
+    "uuid": "^11.1.0",
     "zod": "^4.0.5"
   },
   "devDependencies": {
