--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-hot-toast": "^2.5.2",
     "tailwind-scrollbar-hide": "^4.0.0",
     "uuid": "^11.1.0",
-    "zod": "^4.0.5"
+    "zod": "^4.0.5",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
